...
    
    func addUsernameField() {
        usernameField.frame = CGRect(x: 0, y: screenBounds.height/8, width: screenBounds.width, height: screenBounds.height/15)
        usernameField.backgroundColor = UIColor.colorWithAlphaComponent(.whiteColor())(0.5)
        usernameField.placeholder = "Username"
        usernameField.textAlignment = .Center
        usernameField.accessibilityLabel = "phollowee"
        usernameField.delegate = self
        usernameField.autocorrectionType = .No
        usernameField.autocapitalizationType = UITextAutocapitalizationType.None

        addSubview(usernameField)
    }
    
    func addCreatePhollowButton() {
        createPhollowButton.frame = CGRect(x: screenBounds.width/4, y: screenBounds.height*3/8, width: screenBounds.width/2, height: 30)
        createPhollowButton.setTitleColor(.whiteColor(), forState: .Normal)
        createPhollowButton.setTitle("Phollow", forState: .Normal)
        createPhollowButton.accessibilityLabel = "pholloweesubmit"
        addSubview(createPhollowButton)
    }
    
    func addDestroyPhollowButton() {
        destroyPhollowButton.frame = CGRect(x: screenBounds.width/4, y: screenBounds.height/2, width: screenBounds.width/2, height: 30)
        destroyPhollowButton.setTitleColor(.whiteColor(), forState: .Normal)
        destroyPhollowButton.setTitle("Unphollow", forState: .Normal)
        destroyPhollowButton.titleLabel!.font = UIFont.systemFontOfSize(UIScreen.mainScreen().bounds.size.height/45)
        destroyPhollowButton.accessibilityLabel = "unpholloweesubmit"
        addSubview(destroyPhollowButton)
    }
    
    func addCancelButton() {
        cancelButton.frame = CGRect(x: screenBounds.width*4/5, y: 20, width: screenBounds.width/5, height: 30)
        cancelButton.setTitleColor(.whiteColor(), forState: .Normal)
        cancelButton.titleLabel!.font = UIFont.systemFontOfSize(UIScreen.mainScreen().bounds.size.width/10)
        cancelButton.setTitle("x", forState: .Normal)
        cancelButton.accessibilityLabel = "cancel"
        addSubview(cancelButton)
    }
    
    func addIdLabel() {
        identificationLabel.frame = CGRect(x: 0, y: 0, width: 50, height: 20)
        identificationLabel.text = "PhollowView"
...
